[project]
name = "awesome"
version = "0.0.1"
description = "awesome"
authors = [{ name = "senzing", email = "support@senzing.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = [
  "LICENSE",
  ".github/senzing-corporate-contributor-license-agreement.pdf",
  ".github/senzing-individual-contributor-license-agreement.pdf",
]

[project.urls]
bugtracker = "https://github.com/senzing/awesome/issues"
changelog = "https://github.com/senzing/awesome/blob/main/CHANGELOG.md"
source = "https://github.com/senzing/awesome"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
all = [
  { include-group = "development" },
  { include-group = "documentation" },
  { include-group = "lint" },
  { include-group = "test" },
]
development = [
  "build==1.4.0",
  "coverage==7.10.7; python_version <= '3.11'",
  "coverage==7.13.1; python_version > '3.11'",
  "cryptography==46.0.3",
  "psutil==7.2.1",
  "pytest-cov==7.0.0",
  "pytest-schema==0.1.2",
  "pytest==8.4.2; python_version <= '3.11'",
  "pytest==9.0.2; python_version > '3.11'",
  "twine==6.2.0",
  "virtualenv==20.36.1",
  "wheel==0.45.1",
]
documentation = [
  "autodocsumm",
  "myst_parser",
  "sphinx-autodoc-typehints",
  "sphinx-gallery",
  "sphinx-jinja2-compat",
  "sphinx-prompt",
  "sphinx-rtd-theme",
  "sphinx-tabs",
  "sphinx-toolbox",
  "sphinx",
  "sphinxcontrib-applehelp",
  "sphinxcontrib-devhelp",
  "sphinxcontrib-htmlhelp",
  "sphinxcontrib-jquery",
  "sphinxcontrib-jsmath",
  "sphinxcontrib-qthelp",
  "sphinxcontrib-serializinghtml",
  "sphinxext-remoteliteralinclude",
]
lint = [
  "bandit==1.8.6; python_version <= '3.11'",
  "bandit==1.9.3; python_version > '3.11'",
  "black==25.11.0; python_version <= '3.11'",
  "black==25.12.0; python_version > '3.11'",
  "flake8==7.3.0",
  "isort==6.1.0; python_version <= '3.11'",
  "isort==7.0.0; python_version > '3.11'",
  "mypy==1.19.1",
  "pylint-per-file-ignores==2.0.3; python_version <= '3.11'",
  "pylint-per-file-ignores==3.2.0; python_version > '3.11'",
  "pylint==3.3.9; python_version <= '3.11'",
  "pylint==4.0.4; python_version > '3.11'",
]
test = [
  "pytest==8.4.2; python_version <= '3.11'",
  "pytest==9.0.2; python_version > '3.11'",
  "coverage==7.10.7; python_version <= '3.11'",
  "coverage==7.13.1; python_version > '3.11'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 120

[tool.isort]
profile = "black"
src_paths = ["examples", "src", "tests"]

[tool.mypy]
disable_error_code = [
  "arg-type",
  "attr-defined",
  "import-not-found",
  "index",
  "name-defined",
  "no-untyped-call",
  "no-untyped-def",
  "operator",
  "union-attr",
  "var-annotated",
]

[[tool.mypy.overrides]]
module = "senzing_abstract.szengineflags.*"
ignore_missing_imports = "true"
warn_unused_ignores = "false"

[[tool.mypy.overrides]]
module = "pytest_schema.*"
ignore_missing_imports = "true"

[tool.pylint]
ignored-argument-names = "args|kwargs"
disable = [
  "broad-except",
  "consider-using-f-string",
  "line-too-long",
  "too-many-branches",
  "too-many-locals",
]
good-names = ["awesome"]
ignore = ["__init__.py", "docs/source/conf.py"]
notes = ["FIXME"]
